src/antlr/UnifiedParser.java
// Generated from E:/مراحل عمل مشروع المترجمات/Compiler_project/src/antlr/UnifiedParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class UnifiedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DOCTYPE=1, COMMENT=2, STYLE_OPEN=3, SCRIPT_JSON_OPEN=4, OPEN=5, TEXT=6, 
		NEWLINE=7, CR=8, WS=9, JINJA_EXPR=10, JINJA_STMT_IF=11, JINJA_STMT_ELSE=12, 
		JINJA_STMT_ENDIF=13, JINJA_STMT_FOR=14, JINJA_STMT_ENDFOR=15, JINJA_STMT_BLOCK=16, 
		JINJA_STMT_ENDBLOCK=17, JINJA_STMT_EXTENDS=18, JINJA_STMT=19, META=20, 
		LINK=21, IMG=22, BR=23, HR=24, INPUT=25, CLOSE=26, SLASH=27, EQUALS=28, 
		ATTR_VALUE=29, NAME=30, WS_TAG=31, FONT_FAMILY=32, DIRECTION=33, BACKGROUND_COLOR=34, 
		PADDING=35, MAX_WIDTH=36, MARGIN=37, BACKGROUND=38, BORDER_RADIUS=39, 
		BOX_SHADOW=40, TEXT_ALIGN=41, COLOR=42, DISPLAY=43, MARGIN_TOP=44, WIDTH=45, 
		BORDER=46, CURSOR=47, LIST_STYLE=48, TEXT_DECORATION=49, MARGIN_BOTTOM=50, 
		CLASS_SELECTOR=51, LBRACE=52, RBRACE=53, COLON=54, SEMICOLON=55, DOT=56, 
		HASH=57, FUNCTION=58, IDENTIFIER=59, VALUE=60, WS_CSS=61, STYLE_CLOSE=62, 
		LBRACE_JSON=63, RBRACE_JSON=64, LBRACKET=65, RBRACKET=66, COLON_JSON=67, 
		COMMA=68, TRUE=69, FALSE=70, NULL=71, STRING=72, NUMBER=73, WS_JSON=74, 
		SCRIPT_JSON_CLOSE=75;
	public static final int
		RULE_program = 0, RULE_programItem = 1, RULE_htmlDocument = 2, RULE_doctype = 3, 
		RULE_styleBlock = 4, RULE_scriptJsonBlock = 5, RULE_element = 6, RULE_normalElement = 7, 
		RULE_voidHtmlElement = 8, RULE_voidName = 9, RULE_startTag = 10, RULE_endTag = 11, 
		RULE_selfClosingTag = 12, RULE_content = 13, RULE_attribute = 14, RULE_misc = 15, 
		RULE_jinjaStmt = 16, RULE_jinjaIf = 17, RULE_jinjaFor = 18, RULE_jinjaBlock = 19, 
		RULE_jinjaExtends = 20, RULE_cssStylesheet = 21, RULE_ruleSet = 22, RULE_selector = 23, 
		RULE_simpleSelector = 24, RULE_elementSelector = 25, RULE_pseudoClass = 26, 
		RULE_declaration = 27, RULE_valueGroup = 28, RULE_property = 29, RULE_jsonDocument = 30, 
		RULE_value = 31, RULE_object = 32, RULE_pair = 33, RULE_array = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programItem", "htmlDocument", "doctype", "styleBlock", "scriptJsonBlock", 
			"element", "normalElement", "voidHtmlElement", "voidName", "startTag", 
			"endTag", "selfClosingTag", "content", "attribute", "misc", "jinjaStmt", 
			"jinjaIf", "jinjaFor", "jinjaBlock", "jinjaExtends", "cssStylesheet", 
			"ruleSet", "selector", "simpleSelector", "elementSelector", "pseudoClass", 
			"declaration", "valueGroup", "property", "jsonDocument", "value", "object", 
			"pair", "array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'<style>'", "'<script>'", "'<'", null, null, "'\\r'", 
			null, null, null, null, null, null, null, null, null, null, null, "'meta'", 
			"'link'", "'img'", "'br'", "'hr'", "'input'", "'>'", "'/'", "'='", null, 
			null, null, "'font-family'", "'direction'", "'background-color'", "'padding'", 
			"'max-width'", "'margin'", "'background'", "'border-radius'", "'box-shadow'", 
			"'text-align'", "'color'", "'display'", "'margin-top'", "'width'", "'border'", 
			"'cursor'", "'list-style'", "'text-decoration'", "'margin-bottom'", null, 
			null, null, null, "';'", "'.'", "'#'", null, null, null, null, "'</style>'", 
			null, null, "'['", "']'", null, "','", "'true'", "'false'", "'null'", 
			null, null, null, "'</script>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DOCTYPE", "COMMENT", "STYLE_OPEN", "SCRIPT_JSON_OPEN", "OPEN", 
			"TEXT", "NEWLINE", "CR", "WS", "JINJA_EXPR", "JINJA_STMT_IF", "JINJA_STMT_ELSE", 
			"JINJA_STMT_ENDIF", "JINJA_STMT_FOR", "JINJA_STMT_ENDFOR", "JINJA_STMT_BLOCK", 
			"JINJA_STMT_ENDBLOCK", "JINJA_STMT_EXTENDS", "JINJA_STMT", "META", "LINK", 
			"IMG", "BR", "HR", "INPUT", "CLOSE", "SLASH", "EQUALS", "ATTR_VALUE", 
			"NAME", "WS_TAG", "FONT_FAMILY", "DIRECTION", "BACKGROUND_COLOR", "PADDING", 
			"MAX_WIDTH", "MARGIN", "BACKGROUND", "BORDER_RADIUS", "BOX_SHADOW", "TEXT_ALIGN", 
			"COLOR", "DISPLAY", "MARGIN_TOP", "WIDTH", "BORDER", "CURSOR", "LIST_STYLE", 
			"TEXT_DECORATION", "MARGIN_BOTTOM", "CLASS_SELECTOR", "LBRACE", "RBRACE", 
			"COLON", "SEMICOLON", "DOT", "HASH", "FUNCTION", "IDENTIFIER", "VALUE", 
			"WS_CSS", "STYLE_CLOSE", "LBRACE_JSON", "RBRACE_JSON", "LBRACKET", "RBRACKET", 
			"COLON_JSON", "COMMA", "TRUE", "FALSE", "NULL", "STRING", "NUMBER", "WS_JSON", 
			"SCRIPT_JSON_CLOSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UnifiedParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UnifiedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(UnifiedParser.EOF, 0); }
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public List<ProgramItemContext> programItem() {
			return getRuleContexts(ProgramItemContext.class);
		}
		public ProgramItemContext programItem(int i) {
			return getRuleContext(ProgramItemContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(70);
				doctype();
				}
				break;
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -8644659484736795398L) != 0) || _la==LBRACKET) {
				{
				{
				setState(73);
				programItem();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramItemContext extends ParserRuleContext {
		public HtmlDocumentContext htmlDocument() {
			return getRuleContext(HtmlDocumentContext.class,0);
		}
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public MiscContext misc() {
			return getRuleContext(MiscContext.class,0);
		}
		public StyleBlockContext styleBlock() {
			return getRuleContext(StyleBlockContext.class,0);
		}
		public ScriptJsonBlockContext scriptJsonBlock() {
			return getRuleContext(ScriptJsonBlockContext.class,0);
		}
		public CssStylesheetContext cssStylesheet() {
			return getRuleContext(CssStylesheetContext.class,0);
		}
		public JsonDocumentContext jsonDocument() {
			return getRuleContext(JsonDocumentContext.class,0);
		}
		public ProgramItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterProgramItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitProgramItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitProgramItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramItemContext programItem() throws RecognitionException {
		ProgramItemContext _localctx = new ProgramItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programItem);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				htmlDocument();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				element();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				misc();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				styleBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				scriptJsonBlock();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(86);
				cssStylesheet();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(87);
				jsonDocument();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlDocumentContext extends ParserRuleContext {
		public List<DoctypeContext> doctype() {
			return getRuleContexts(DoctypeContext.class);
		}
		public DoctypeContext doctype(int i) {
			return getRuleContext(DoctypeContext.class,i);
		}
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public List<MiscContext> misc() {
			return getRuleContexts(MiscContext.class);
		}
		public MiscContext misc(int i) {
			return getRuleContext(MiscContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(UnifiedParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(UnifiedParser.NEWLINE, i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlDocument);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(94);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case DOCTYPE:
						{
						setState(90);
						doctype();
						}
						break;
					case OPEN:
						{
						setState(91);
						element();
						}
						break;
					case TEXT:
					case JINJA_EXPR:
					case JINJA_STMT_IF:
					case JINJA_STMT_FOR:
					case JINJA_STMT_BLOCK:
					case JINJA_STMT_EXTENDS:
					case JINJA_STMT:
						{
						setState(92);
						misc();
						}
						break;
					case NEWLINE:
						{
						setState(93);
						match(NEWLINE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(96); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContext extends ParserRuleContext {
		public TerminalNode DOCTYPE() { return getToken(UnifiedParser.DOCTYPE, 0); }
		public DoctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterDoctype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitDoctype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitDoctype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoctypeContext doctype() throws RecognitionException {
		DoctypeContext _localctx = new DoctypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_doctype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(DOCTYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StyleBlockContext extends ParserRuleContext {
		public TerminalNode STYLE_OPEN() { return getToken(UnifiedParser.STYLE_OPEN, 0); }
		public CssStylesheetContext cssStylesheet() {
			return getRuleContext(CssStylesheetContext.class,0);
		}
		public List<TerminalNode> STYLE_CLOSE() { return getTokens(UnifiedParser.STYLE_CLOSE); }
		public TerminalNode STYLE_CLOSE(int i) {
			return getToken(UnifiedParser.STYLE_CLOSE, i);
		}
		public StyleBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_styleBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterStyleBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitStyleBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitStyleBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StyleBlockContext styleBlock() throws RecognitionException {
		StyleBlockContext _localctx = new StyleBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_styleBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(STYLE_OPEN);
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(101);
				cssStylesheet();
				}
				break;
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STYLE_CLOSE) {
				{
				{
				setState(104);
				match(STYLE_CLOSE);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ScriptJsonBlockContext extends ParserRuleContext {
		public TerminalNode SCRIPT_JSON_OPEN() { return getToken(UnifiedParser.SCRIPT_JSON_OPEN, 0); }
		public TerminalNode SCRIPT_JSON_CLOSE() { return getToken(UnifiedParser.SCRIPT_JSON_CLOSE, 0); }
		public JsonDocumentContext jsonDocument() {
			return getRuleContext(JsonDocumentContext.class,0);
		}
		public ScriptJsonBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptJsonBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterScriptJsonBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitScriptJsonBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitScriptJsonBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptJsonBlockContext scriptJsonBlock() throws RecognitionException {
		ScriptJsonBlockContext _localctx = new ScriptJsonBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_scriptJsonBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(SCRIPT_JSON_OPEN);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE_JSON || _la==LBRACKET) {
				{
				setState(111);
				jsonDocument();
				}
			}

			setState(114);
			match(SCRIPT_JSON_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElementContext extends ParserRuleContext {
		public NormalElementContext normalElement() {
			return getRuleContext(NormalElementContext.class,0);
		}
		public VoidHtmlElementContext voidHtmlElement() {
			return getRuleContext(VoidHtmlElementContext.class,0);
		}
		public SelfClosingTagContext selfClosingTag() {
			return getRuleContext(SelfClosingTagContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_element);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				normalElement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				voidHtmlElement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				selfClosingTag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NormalElementContext extends ParserRuleContext {
		public StartTagContext startTag() {
			return getRuleContext(StartTagContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public EndTagContext endTag() {
			return getRuleContext(EndTagContext.class,0);
		}
		public NormalElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normalElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterNormalElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitNormalElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitNormalElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NormalElementContext normalElement() throws RecognitionException {
		NormalElementContext _localctx = new NormalElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_normalElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			startTag();
			setState(122);
			content();
			setState(123);
			endTag();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidHtmlElementContext extends ParserRuleContext {
		public TerminalNode OPEN() { return getToken(UnifiedParser.OPEN, 0); }
		public VoidNameContext voidName() {
			return getRuleContext(VoidNameContext.class,0);
		}
		public TerminalNode CLOSE() { return getToken(UnifiedParser.CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public VoidHtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidHtmlElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterVoidHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitVoidHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitVoidHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VoidHtmlElementContext voidHtmlElement() throws RecognitionException {
		VoidHtmlElementContext _localctx = new VoidHtmlElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_voidHtmlElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(OPEN);
			setState(126);
			voidName();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NAME) {
				{
				{
				setState(127);
				attribute();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidNameContext extends ParserRuleContext {
		public TerminalNode META() { return getToken(UnifiedParser.META, 0); }
		public TerminalNode LINK() { return getToken(UnifiedParser.LINK, 0); }
		public TerminalNode IMG() { return getToken(UnifiedParser.IMG, 0); }
		public TerminalNode BR() { return getToken(UnifiedParser.BR, 0); }
		public TerminalNode HR() { return getToken(UnifiedParser.HR, 0); }
		public TerminalNode INPUT() { return getToken(UnifiedParser.INPUT, 0); }
		public VoidNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voidName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).enterVoidName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnifiedParserListener ) ((UnifiedParserListener)listener).exitVoidName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnifiedParserVisitor ) return ((UnifiedParserVisitor<? extends T>)visitor).visitVoidName(this);
			else return visitor.visitChildren(this);
		}
	}
